# better-routes

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
better-routes/: CHANGELOG.md  Cargo.toml  README.md
better-routes-macros/: CHANGELOG.md  Cargo.toml  README.md
better-routes-macros/src/: lib.rs  method_helper.rs  routes.rs
better-routes/src/: lib.rs
better-routes/tests/: all.rs
better-routes/tests/trybuild/: double-rejection.rs  double-rejection.stderr  double-state.rs  double-state.stderr  no-arg.rs  no-arg.stderr  no-handler.rs  no-handler.stderr  non-async-handler.rs  non-async-handler.stderr  non-self-arg.rs  non-self-arg.stderr  separate-modules.rs  should-pass.rs  without-routes.rs  without-routes.stderr
better-routes/tests/trybuild/fail/: should-fail-invalid-capture.rs  should-fail-invalid-capture.stderr  should-fail-invalid-path.rs  should-fail-invalid-path.stderr  should-fail-with-invalid-state-2.rs  should-fail-with-invalid-state-2.stderr  should-fail-with-invalid-state.rs  should-fail-with-invalid-state.stderr  should-fail-without-async.rs  should-fail-without-async.stderr  should-fail-without-name.rs  should-fail-without-name.stderr  should-fail-without-self.rs  should-fail-without-self.stderr
better-routes/tests/trybuild/pass/: should-pass-with-name.rs  should-pass-with-valid-state.rs  should-pass-without-methods.rs  should-pass-without-state.rs
examples/basic/: Cargo.toml  README.md
examples/basic/src/: main.rs  views.rs
examples/basic/src/routes/: mod.rs
examples/basic/src/routes/handlers/: api.rs  mod.rs  pages.rs
examples/basic/templates/: base.html  home.html
examples/basic/templates/table/: dialog.html  row.html  table.html
