[package]
name = "better-routes-macros"
version = "0.2.0"
edition = "2021"
description = "Macros for better-routes"
license = "MIT"
repository = "https://github.com/ratnaraj7/better-routes"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.72", features = ["extra-traits", "full"] }
