[package]
name = "better-routes"
version = "0.3.3"
edition = "2021"
description = "A powerful Rust library designed for generating type-safe and maintainable Axum routers."
license = "MIT"
repository = "https://github.com/ratnaraj7/better-routes"
keywords = ["axum", "router", "typed-routing", "centralized", "maintainable"]
categories = ["web-programming"]

[dependencies]
better-routes-macros = { version = "0.3.0", path = "../better-routes-macros" }

[dev-dependencies]
axum = "0.7.5"
serde = { version = "1.0.204", features = ["derive"] }
axum-extra = { version = "0.9.3", features = ["typed-routing"] }
trybuild = "1.0.98"
tokio = { version = "1.39.2", features = ["rt-multi-thread", "macros"] }
tower = "0.4.13"
http-body-util = "0.1.2"
