[package]
name = "basic"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-routing"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
better-routes = { path = "../../better-routes" }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
